@@ -1,21 +1,7 @@
 ---
-name: Module-Text-Template-Build
-version: 0.04.8
+abstract: 'Create a module based on a template to use with Module::Build'
 author:
   - 'Khemir Nadim ibn Hamouda. <nadim@khemir.net>'
-abstract: Create a module based on a template to use with Module::Build
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  Data::TreeDumper: 0
-  File::Basename: 0
-  File::Path: 0
-  File::Slurp: 0
-  Module::Util: 0
-  Readonly: 0
-  Sub::Exporter: 0
-  Text::Template: 0
 build_requires:
   Directory::Scratch::Structured: 0
   File::Find::Rule: 0
@@ -28,11 +14,27 @@ build_requires:
   Test::NoWarnings: 0
   Test::Warn: 0
   Text::Diff: 0
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3603'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Module-Text-Template-Build
 provides:
   Module::Text::Template::Build:
     file: lib/Module/Text/Template/Build.pm
     version: 0.04
-generated_by: Module::Build version 0.2808
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+requires:
+  Data::TreeDumper: 0
+  File::Basename: 0
+  File::Path: 0
+  File::Slurp: 0
+  Module::Util: 0
+  Readonly: 0
+  Sub::Exporter: 0
+  Text::Template: 0
+resources:
+  license: http://dev.perl.org/licenses/
+version: v0.04.9
