@@ -2,6 +2,18 @@
 # This is Todo.txt #
 #------------------#
 
+Add COPYRIGHT_YEAR variable that is automatically set by the Module
+
+
+split the template data from the Module
+
+have a Module::Build and a MakeMaker template
+
+give multiple templates as input so one can reuse, say, the test  template in other templates
+
+add an interactive wizard (something very simple)
+
+
 add tem::readline support ?
 
 test build
