@@ -97,7 +97,7 @@ if($ENV{'{{$DISTRIBUTION_ENV_VARIABLE}}_USE_GIT_VERSION_FOR_DIST'})
 	
 	if($have_git)
 		{
-		print `git status -a`;
+		print `git status`;
 		
 		if($self->do_system('git log  --decorate > git_Changes'))
 			{
@@ -145,10 +145,11 @@ my $build = $class->new
 		{
 		'Readonly'         => 0,
 		'Sub::Exporter'     => 0,
+		#~ 'Getopt::Long' => 0,
 		},
 		
 	pm_files     => \%all_modules,
-	autosplit    => \@split_modules,
+	#~ autosplit    => \@split_modules,
 	
 	#MODIFY_ME_BEFORE_FIRST_RUN
 	#~ script_files => 'scripts/script.pl',
