@@ -1,2 +1,6 @@
+
+use strict ;
+use warnings ;
+
 use Test::Prereq::Build;
 prereq_ok();
