@@ -1,7 +1,7 @@
 # perl_critic setup file
 
 [Documentation::RequirePodSections]
-lib_sections    = NAME | SYNOPSIS | DESCRIPTION | DOCUMENTATION | SUBROUTINES/METHODS | BUGS AND LIMITATIONS | LICENSE AND COPYRIGHT | SUPPORT | AUTHOR  | SEE ALSO 
+lib_sections    = NAME | SYNOPSIS | DESCRIPTION | DOCUMENTATION | SUBROUTINES/METHODS | BUGS AND LIMITATIONS | COPYRIGHT AND LICENSE | SUPPORT | AUTHOR  | SEE ALSO 
 script_sections = NAME | USAGE | OPTIONS | EXIT STATUS | AUTHOR
 
 [Documentation::PodSpelling]
